# goodmem

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  docker-compose.yml  run_localhost.sh  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  outdated-dependencies.md  outdated-go-dependencies.md
.github/workflows/: build-clients.yml  build.yml  code-quality.yml  dependabot-auto-merge.yml  dependency-check.yml
cli/: .dockerignore  Dockerfile  build.sh  gen_proto.sh  go.mod  go.sum  main.go
cli/cmd/: apikey.go  embedder.go  init.go  json_formatter.go  memory.go  root.go  root_test.go  space.go  user.go  util.go  version.go  version_test.go
clients/: README.md  build_all.sh
clients/dotnet/: Dockerfile  Goodmem.Client.sln  README.md  build.sh
clients/go/: Dockerfile  README.md  build.sh  client.go  client_test.go  go.mod
clients/java/: Dockerfile  README.md  build.gradle.kts  build.sh  init.gradle
clients/js/: .mocharc.json  Dockerfile  README.md  build.sh  package-lock.json  package.json
clients/python/: Dockerfile  README.md  build.sh  pyproject.toml
clients/python/goodmem_client/: client.py
clients/python/goodmem_client.egg-info/: PKG-INFO  SOURCES.txt
clients/python/tests/: test_client.py
config/: gen_cert.sh  local_dev.env  update_intellij_config.sh
database/: Dockerfile
database/initdb/: 00-extensions.sql  01-schema.sql
scripts/pre-commit-hooks/: README.md  check_java_format.sh
server/: Dockerfile  build.gradle.kts  build.sh  check_outdated.sh  format_java.sh
(+129 files in other folders)
